Minor changes, including in boundary functional defn

--- a/main.tex
+++ b/main.tex
@@ -217,9 +217,9 @@ If we have a 1-functional $f$, each individual $f(\lambda_i)$, as well as $f(\la
 Suppose we have a volume $\tau$ within a greater volume of arbitrary fluid. Say that the fluid is free to flow through the surface of $\tau$, and that we are able to contract and expand $\tau$ as we wish.\footnote{The flow is compressible} The fluid flux through the surface of $\tau$ can be determined without worrying about the behavior of the fluid within and outside of $\tau$. The fluid can be swishing about in any sort of way, but as long as it doesn't cross the surface of $\tau$, it doesn't make one bit of difference as to the flux through $\tau$. The flux, therefore, depends only on the boundary of $\tau$: $\partial\tau$. Therefore, if we have a method of determining the overall flux through $\tau$, it would be effectively identical to a method that determines the flux through $\partial\tau$. Speaking mathematically, this means that in this case, a particular 3-functional over $\tau$ would be equivalent to a 2-functional over $\partial\tau$. This suggests a special relationship between the proposed 2-functional and 3-functional. If we call the flux 2-functional $\Phi$ and the flux 3-functional $\Theta$, we denote the relationship between them using the \textbf{boundary functional} $\eth$ as: \begin{gather} \eth\Phi(\tau) = \Theta(\partial\tau) \end{gather}
 
 \begin{defn}
-	$\eth : F_k \to F_{k+1}$ such that $\eth f_k(\sigma^{k+1}) = f_k(\partial \sigma^{k+1})$ is the \textbf{boundary functional} on k-functionals. 
+	Given $\eth : F_k \to F_{k+1}$ and $f_k \in F_k$, \textbf{boundary functional} $\eth f_k \in F_{k+1}$ is the functional with the property that $\eth f_k(\sigma^{k+1}) = f_k(\partial \sigma^{k+1})$. 
 \end{defn}
-\textbf{The boundary functional is not the operator, it's the function that we get from applying the operator to the functional}
+
 
 Let's examine now how the boundary functional works in practice by returning to the work functional. We will be once again considering $W \in F_1$ and $\lambda \in S^1$, and assuming that there is some force defined, from which we may determine $W(\lambda)$. [\textbf{Don't say we're neglecting it, say that we're only using conservative forces}] We will now neglect the work done by drag, considering instead only the work done by conservative forces. The implication of this is that the work done by the force on the particle will be path independent. In other words, if we have any closed path $\lambda$ and a work function $W$ defined with a conservative force, we have that \begin{gather} W(\lambda) = 0. \end{gather} We call functions such as $W$ \textbf{exact functionals}.   
 
@@ -229,7 +229,7 @@ Let's examine now how the boundary functional works in practice by returning to 
 \end{defn}
 
 
-Recall that for any k-surface $\sigma^k$, $\partial\partial\sigma^k = \emptyset$. This, together with the definition of the boundary functional, suggests an interesting property of k-functionals that must be explored and formalized. Suppose we have $f \in F_k$ and $g \in F_{k+1}$, such that $g = \eth f$. For (k+1)-surface $\sigma^{k+1} \in S^{k+1}$, we have that \begin{gather} g(\sigma^{k+1}) = \eth f(\sigma^{k+1}) = f(\partial\sigma^{k+1}). \end{gather} So far so good. But now introduce $h \in F_{k+2}$, such that $h = \eth g$, as well as $\sigma^{k+2} \in S^{k+2}$. We have then that \begin{gather} h(\sigma^{k+2}) = \eth g(\sigma^{k+2}) = \eth\eth f(\sigma^{k+2}) = f(\partial\partial\sigma^{k+2}). \end{gather} Keeping in mind that $\partial\partial\sigma^{k+2} = \emptyset$, we have that \begin{gather}f(\partial\partial\sigma^{k+2}) = f(\emptyset). \end{gather}
+Recall that for any k-surface $\sigma^k$, $\partial\partial\sigma^k = \emptyset$. This, together with the definition of the boundary functional, suggests an interesting property of k-functionals that must be explored and formalized. Suppose we have $f \in F_k$ and $g \in F_{k+1}$, such that $g = \eth f$. For (k+1)-surface $\sigma^{k+1} \in S^{k+1}$, we have that \begin{gather} g(\sigma^{k+1}) = \eth f(\sigma^{k+1}) = f(\partial\sigma^{k+1}). \end{gather} So far so good. But now introduce $h \in F_{k+2}$, such that $h = \eth g$, as well as $\sigma^{k+2} \in S^{k+2}$. We have then that \begin{gather} h(\sigma^{k+2}) = \eth g(\sigma^{k+2}) = \eth\eth f(\sigma^{k+2}) = \eth f(\partial\sigma^{k+2}) = f(\partial\partial\sigma^{k+2}). \end{gather} Keeping in mind that $\partial\partial\sigma^{k+2} = \emptyset$, we have that \begin{gather}f(\partial\partial\sigma^{k+2}) = f(\emptyset). \end{gather}
 
 $f(\emptyset)$ must be zero, as \begin{gather} f(\emptyset) = f(\emptyset\cup\emptyset) = f(\emptyset) + f(\emptyset) = 2f(\emptyset),\end{gather} so \begin{gather} f(\emptyset) = 2f(\emptyset), \end{gather} so $f(\emptyset) = 0$ for any $f$. 
 
@@ -243,7 +243,7 @@ Because $f(\emptyset) = 0$ and $h(\sigma) = \eth\eth f(\sigma)$, we have that $h
 	For any k-functional $f$, $\eth\eth f$ will be the zero functional. 
 \end{prop}
 
-The takeaway from this is that if we have a k-functional $f \in F_k$, then $\eth f \in F_{k+1}$ will necessarily be exact. We can see this by saying that if $g = \eth f$ and $\partial\sigma^{k+1} = \emptyset$, then \begin{gather} g(\sigma^{k+1}) = \eth f(\sigma^{k+1}) = f(\partial\sigma^{k+1}) = 0\end{gather}. And furthermore, if we have an exact functional $f \in F_k$, then $\eth f = 0$, and $f$ is the boundary functional of some other function in $F_{k-1}$. [\textbf{Say that this means that the importance of this is having the tools work in the finite case}]This allows us an alternate way of determining, for instance, work from a conservative force. If we have a work functional that is the boundary functional of another functional, then the force associated with it will necessarily be conservative.
+The takeaway from this is that if we have a k-functional $f \in F_k$, then $\eth f \in F_{k+1}$ will necessarily be exact. We can see this by saying that if $g = \eth f$ and $\partial\sigma^{k+1} = \emptyset$, then \begin{gather} g(\sigma^{k+1}) = \eth f(\sigma^{k+1}) = f(\partial\sigma^{k+1}) = 0.\end{gather} And furthermore, if we have an exact functional $f \in F_k$, then $\eth f = 0$, and $f$ is the boundary functional of some other function in $F_{k-1}$. [\textbf{Say that this means that the importance of this is having the tools work in the finite case}]This allows us an alternate way of determining, for instance, work from a conservative force. If we have a work functional that is the boundary functional of another functional, then the force associated with it will necessarily be conservative.
 
 
 
